# PhysicsSim

./: App.cpp  App.h  CMakeLists.txt  ECS.h  State.h  Utility.h  Vec2.h  main.cpp
Components/: Components.cpp  Components.h  MotionComponent.h  PhysicalComponent.h  RenderComponent.h  TransformComponent.h
Systems/: GravitationalSystem.cpp  GravitationalSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  Systems.h
